[package]
name = "wgpu-train1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
env_logger = "*"
log = "*"
wgpu = "0.12"
pollster="0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
nalgebra = "*"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
